--- a/config.ini
+++ b/config.ini
@@ -20,13 +20,13 @@ acme_challenge =
 # -------------------------
 [site]
 # The domain name of your site.
-domain =
+domain = meshview.louisianamesh.org
 
 # Site title to show in the browser title bar and headers.
-title = Bay Area Mesh
+title = Louisiana Mesh Community
 
 # A brief message shown on the homepage.
-message = Real time data from around the bay area and beyond.
+message = Real time data from around the bayou.
 
 # Starting URL when loading the index page.
 starting = /chat
@@ -42,36 +42,41 @@ map = True
 top = True
 
 # Map boundaries (used for the map view).
-map_top_left_lat = 39
-map_top_left_lon = -123
-map_bottom_right_lat = 36
-map_bottom_right_lon = -121
+map_top_left_lat = 31
+map_top_left_lon = -92
+map_bottom_right_lat = 29
+map_bottom_right_lon = -89
+
+# Updates intervals in seconds, zero or negative number means no updates
+# defaults will be 3 seconds
+#map_interval=3
+firehose_interal=3
+
+# Weekly net details
+weekly_net_message = Weekly Mesh check-in. The message format should be (LONG NAME) - (CITY YOU ARE IN #LAmesh.
+net_tag = #LAmesh
 
 # Updates intervals in seconds, zero or negative number means no updates
 # defaults will be 3 seconds
 map_interval=3
-firehose_interal=3
-
-# Weekly net details
-weekly_net_message = Weekly Mesh check-in. We will keep it open on every Wednesday from 5:00pm for checkins. The message format should be (LONG NAME) - (CITY YOU ARE IN) #BayMeshNet.
-net_tag = #BayMeshNet
+firehose_interval=3
 
 # -------------------------
 # MQTT Broker Configuration
 # -------------------------
 [mqtt]
 # MQTT server hostname or IP.
-server = mqtt.bayme.sh
+server = mqtt.louisianamesh.org
 
 # Topics to subscribe to (as JSON-like list, but still a string).
-topics = ["msh/US/bayarea/#", "msh/US/CA/mrymesh/#", "msh/US/CA/sacvalley"]
+topics = ["msh/US/LA/#"]
 
 # Port used by MQTT (typically 1883 for unencrypted).
 port = 1883
 
 # MQTT username and password.
-username = meshdev
-password = large4cats
+username = uplink
+password = uplink
 
 
 # -------------------------
